# newslet

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  ocr-review.yml
docs/: docs-autoupdate-setup.md  github-actions-setup.md
docs/superpowers/specs/: 2026-05-30-send-email-now-design.md  2026-07-07-freshness-serendipity-discover-design.md
infra/: samconfig.toml  template.yaml
scripts/: dry_run.py  preview_read.py
src/: requirements.txt
src/newslet/: clock.py  config.py  contracts.py  db.py  discover.py  discovery.py  email_render.py  feeds.py  hn.py  llm_parse.py  newsletters.py  rank.py  search_common.py  serendipity.py  summarize.py  themes.py  tokens.py  tune.py  websearch.py  x_discover.py  x_grok.py
src/newslet/docs/: index.html  product.md
src/newslet/handlers/: digest.py  inbound.py  web.py
src/newslet/templates/: admin.html.j2  discover.html.j2  email.html.j2  emails.html.j2  issues.html.j2  login.html.j2  read.html.j2
tests/: test_clock.py  test_config.py  test_db.py  test_digest.py  test_discover.py  test_discovery.py  test_email_render.py  test_feeds.py  test_hn.py  test_inbound.py  test_inbound_extra.py  test_integration.py  test_newsletters.py  test_rank.py  test_search_helpers.py  test_serendipity.py  test_summarize.py  test_themes.py  test_tokens.py  test_tune.py  test_web.py  test_websearch.py  test_websearch_extra.py  test_x_discover.py  test_x_grok.py
tests/e2e/: conftest.py  test_smoke.py
