[project]
name = "newslet"
version = "0.1.0"
description = "Personalized daily RSS newsletter via Claude + Resend on AWS Lambda."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "boto3>=1.34",
    "fastapi>=0.115",
    "feedparser>=6.0",
    "jinja2>=3.1",
    "mangum>=0.19",
    "pydantic>=2.9",
    "python-dateutil>=2.9",
    "python-multipart>=0.0.20",
    "resend>=2.4",
]

[project.optional-dependencies]
dev = [
    "moto[dynamodb]>=5.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "httpx>=0.27",
    # Browser end-to-end tests (opt-in: `pytest -m e2e`). uvicorn serves the
    # ASGI app on a local port so Playwright can drive a real browser; in
    # production the app runs under Mangum on Lambda, not uvicorn.
    "pytest-playwright>=0.5",
    "uvicorn>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newslet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Exclude the browser e2e suite from the default (fast, offline) run; opt in
# with `pytest -m e2e` once `playwright install chromium` has been run.
addopts = "-q -m 'not e2e'"
markers = [
    "e2e: browser end-to-end tests driven by Playwright (require a Chromium install)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
